<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.talb.exercise2.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:gravity="top"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/london" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:paddingStart="@dimen/headingPadding"
                android:text="@string/welcome_to_london"
                android:textColor="@color/white"
                android:textSize="@dimen/headingSize" />

            <ToggleButton
                android:id="@+id/toggleLang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:onClick="changeLang"
                android:textOff="@string/he"
                android:textOn="@string/en" />
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"

            android:gravity="top"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/paddingHorizontal"
            android:paddingTop="@dimen/paddingTop">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/founded"
                    android:textSize="@dimen/bigTextSize"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/marginLeft"
                    android:text="@string/dateFounded"
                    android:textSize="@dimen/bigTextSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/smallMarginLeft"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/population"
                    android:textSize="@dimen/bigTextSize"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/smallMarginLeft"
                    android:text="@string/pupulationData"
                    android:textSize="@dimen/bigTextSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/bigMarginTop"
                    android:text="@string/labelDetails"
                    android:textSize="@dimen/bigTextSize"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/details" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/bigMarginTop"
                    android:text="@string/labelFunFacts"
                    android:textSize="@dimen/bigTextSize"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginTop">

                    <TableRow>

                        <TextView
                            android:layout_width="13dp"
                            android:layout_column="1"
                            android:paddingEnd="@dimen/paddingLeftBullet"
                            android:text="@string/bulletSpace" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_column="2"
                            android:paddingEnd="@dimen/paddingLeftBullet"
                            android:text="@string/funFactsInfo1"></TextView>
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_column="1"
                            android:paddingEnd="@dimen/paddingLeftBullet"
                            android:text="@string/bulletSpace" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_column="2"
                            android:paddingEnd="@dimen/paddingLeftBullet"
                            android:text="@string/funFactsInfo2"></TextView>
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_column="1"
                            android:paddingEnd="@dimen/paddingLeftBullet"
                            android:text="@string/bulletSpace"></TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_column="2"
                            android:paddingEnd="@dimen/paddingLeftBullet"
                            android:text="@string/funFactsInfo3"></TextView>
                    </TableRow>
                </TableLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/bigMarginTop"
                    android:text="@string/labelPictures"
                    android:textSize="@dimen/bigTextSize"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:scaleType="fitStart"
                android:src="@drawable/bigben" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/bridge" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:scaleType="fitEnd"
                android:src="@drawable/guards" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="openLondonsWiki"
                android:text="@string/learnMore" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
